--- a/README
+++ b/README
@@ -11,9 +11,7 @@ behave uniformly.  To whit:
 
 	# First:
 
-	sudo apt-get install git php5 php5-json wmctrl curl
-  git config --global user.email "..."
-  git config --global user.name "..."
+	sudo apt-get install git php5 wmctrl dconf
   wget https://raw.github.com/greg-1-anderson/utiliscripts/master/move-in
 	chmod +x move-in
   ./move-in
