Add warning to README

--- a/README
+++ b/README
@@ -2,7 +2,8 @@ Utiliscripts
 ============
 
 Utiliscripts make your life easier.  Hopefully, each script will be
-self-documenting if you read the source, but maybe not.
+self-documenting if you read the source, but maybe not. Some scripts
+here have fallen into disrepair and should not be used.
 
 Someday I will put a master index here.  Maybe.
 
