--- a/README
+++ b/README
@@ -1,37 +1,14 @@
-Utiliscripts
-============
+Shell Scripts
+=============
 
-Utiliscripts make your life easier.  Hopefully, each script will be
-self-documenting if you read the source, but maybe not. Some scripts
-here have fallen into disrepair and should not be used.
+To get started, run:
 
-Someday I will put a master index here.  Maybe.
+    source install
 
-One of the things I use these scripts for is to make all of my systems
-behave uniformly.  To whit:
+This will also install the following projects:
 
-	# First:
+    - History Recall
+    - fd
+    - git-bashrc
 
-	sudo apt-get install git php5 php5-json wmctrl curl
-  git config --global user.email "..."
-  git config --global user.name "..."
-  wget https://raw.github.com/greg-1-anderson/utiliscripts/master/move-in
-	chmod +x move-in
-  ./move-in
-
-  # Optional:
-
-  rm move-in
-  source $HOME/.bashrc
-  sudo $HOME/local/utiliscripts/base-apt-install
-
-The move-in script checks out all of the utiliscripts and sets
-up the $PATH and a number of other environment settings.
-
-The base-apt-install uses `apt-get install` to install a whole
-bunch of packages.  Run with --help to see options for installing
-less than everything (the default is 'everything').
-
-Note:  Some of these scripts (e.g. move-in) work fine on the Mac.
-Use the `base-brew-install` script instead of `base-apt-install` to get
-the software you need.
+Also, all of the scripts contained in this project are added to the $PATH once installed.
